# labscript-suite-windows

./: README.md  pyproject.toml
app_saved_configs/imaq_lab/blacs/: IMAQ-Lab-Laptop-A_BLACS.h5
imaq-library/labscriptlib_prawn-demo/: connection_table.py
labconfig/: IMAQ-Lab-Laptop-A.ini  zpsecret-2bf25751.key
